packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__060_tree_scope_structural_edges_restrict_graph_filters.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 060_tree_scope_structural_edges_restrict_graph_filters [tree_scope_filters]: structural edges restrict graph filters"
expression: result
info:
  id: 060_tree_scope_structural_edges_restrict_graph_filters
  name: structural edges restrict graph filters
  category: tree_scope_filters
  description: tree_scope_filters scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/060_tree_scope_structural_edges_restrict_graph_filters/scenario.toml
---
{
  "category": "tree_scope_filters",
  "files": [],
  "scenario_id": "060_tree_scope_structural_edges_restrict_graph_filters",
  "status": "validated"
}
