packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__061_tree_scope_tree_hops_limit_section_expansion.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 061_tree_scope_tree_hops_limit_section_expansion [tree_scope_filters]: tree hops limit section expansion"
expression: result
info:
  id: 061_tree_scope_tree_hops_limit_section_expansion
  name: tree hops limit section expansion
  category: tree_scope_filters
  description: tree_scope_filters scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/061_tree_scope_tree_hops_limit_section_expansion/scenario.toml
---
{
  "category": "tree_scope_filters",
  "files": [],
  "scenario_id": "061_tree_scope_tree_hops_limit_section_expansion",
  "status": "validated"
}
