packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__063_tree_scope_verified_edges_keep_graph_filters.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 063_tree_scope_verified_edges_keep_graph_filters [tree_scope_filters]: verified edges keep graph filters"
expression: result
info:
  id: 063_tree_scope_verified_edges_keep_graph_filters
  name: verified edges keep graph filters
  category: tree_scope_filters
  description: tree_scope_filters scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/063_tree_scope_verified_edges_keep_graph_filters/scenario.toml
---
{
  "category": "tree_scope_filters",
  "files": [],
  "scenario_id": "063_tree_scope_verified_edges_keep_graph_filters",
  "status": "validated"
}
