packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__070_fuzzy_suggestion_renamed_symbol.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 070_fuzzy_suggestion_renamed_symbol [semantic_check]: Fuzzy Suggestion Renamed Symbol"
expression: result
info:
  id: 070_fuzzy_suggestion_renamed_symbol
  name: Fuzzy Suggestion Renamed Symbol
  category: semantic_check
  description: Test fuzzy pattern suggestion when a function has been renamed in source code
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/070_fuzzy_suggestion_renamed_symbol/scenario.toml
---
{
  "category": "semantic_check",
  "docs_checked": [
    "docs"
  ],
  "issue_count": 1,
  "issues": [
    {
      "doc": "docs",
      "fuzzy_suggestion": {
        "confidence": 0.68,
        "replacement_drawer": ":OBSERVE: lang:rust \"pub fn process_records(data: Vec<u8>) -> Result<(), Error> { $$$BODY }\"",
        "source_location": "src/lib.rs:3",
        "suggested_pattern": "pub fn process_records(data: Vec<u8>) -> Result<(), Error> { $$$BODY }"
      },
      "has_fuzzy_suggestion": true,
      "issue_type": "observation_target_missing",
      "message": "Observation pattern 'fn process_data($$$)' found no matches in source files",
      "node_id": "docs#API Documentation/Core Functions/Process Records",
      "severity": "warning"
    }
  ],
  "scenario_id": "070_fuzzy_suggestion_renamed_symbol"
}
